--- a/CHANGELOG
+++ b/CHANGELOG
@@ -56,3 +56,4 @@
   references in merb_test_unit
 * merb_test_unit: moving plugin rakefiles into a plugin name parent folder
 * merb_test_unit: Normalize calls to Merb.start
+*I Trolled this document
